Add mobile version css

--- a/style.css
+++ b/style.css
@@ -698,7 +698,6 @@ form textarea {
   padding: 5%;
   margin: 1rem 0;
   overflow-y: auto;
-  height: 80vh;
 }
 
 .popup h2 {
@@ -772,24 +771,37 @@ form textarea {
   margin: 3vw;
 }
 
+.popup-buttons {
+  margin-top: 6vw;
+}
+
 .popup-links *,
 .popup-buttons * {
   margin: 0;
 }
 
 .project-button i {
-  margin-left: 3.5rem;
+  margin-left: 3.5vw;
 }
 
 .project-button {
   padding: 10px 15px;
   background-color: #fff;
   border: 1px solid #1a2236;
-  margin: 4vh 1rem 4vh 0;
 }
 
 .fa-arrow-right {
   margin: 0.4rem;
+}
+
+#live-url {
+  margin-right: 1vw;
+}
+
+.popup-links .button:hover {
+  background-color: #1a2236;
+  border: #fff solid 0.05rem;
+  color: #fff;
 }
 
 .popup-buttons {
